<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wait">Wait...</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_detals_prognoz">DetalsPrognoz</string>
    <string name="title_activity_big_clock">BigClock</string>
    <string name="title_activity_from_gis">FromGis</string>
    <string name="title_activity_dyn_usd">DynUsd</string>
    <string name="title_activity_clock_for_home">ClockForHome</string>
    <string name="title_activity_splash">Splash</string>
    
    <string name="demo_null">-00.00</string>
    <string name="demo_trend">N</string>
    <string name="demo_object1">object1</string>
    <string name="demo_object2">object2</string>
    <string name="demo_object3">object3</string>
    <string name="zerro_plas_minus">+-0</string>
    <string name="zerro_DUN">D U N</string>
    <string name="zerro_USD">USD 00.00</string>
    <string name="zerro_BRENT">BRENT 00.00</string>
    

</resources>
