<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main_LL_rows"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim3mm"
            android:background="@drawable/myshape" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_shape"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/ll_b_and_w"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/my_shape" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim02mm"
                    android:layout_marginRight="@dimen/dim3mm"
                    android:layout_marginTop="@dimen/dim3mm"
                    android:layout_weight="50"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/text_label_b_and_w"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_null"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/text_label_b_and_w"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal|center"
                        android:text="@string/demo_trend"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/text_label_b_and_w"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_null"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="@dimen/dim5mm" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    style="@style/text_label_b_and_w"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dim3mm"
                    android:layout_marginLeft="@dimen/dim3mm"
                    android:layout_marginRight="@dimen/dim3mm"
                    android:layout_marginTop="@dimen/dim3mm"
                    android:layout_weight="20"
                    android:text="@string/demo_null"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/dim15mm" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/text_label_b_and_w"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dim01mm"
                android:layout_weight="80"
                android:text="@string/demo_object1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/dim5mm" />

        </LinearLayout>

    </FrameLayout>

    </LinearLayout>

</LinearLayout>
