<?xml version="1.0" encoding="utf-8"?>
<MediaController xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/widjRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/r56tl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:background="@drawable/myshape"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/curT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/zerro_plas_minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dim15mm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/minT"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/trend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="D U N"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/maxT"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/usd_brent_tl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/usd"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim01mm"
                    android:layout_weight="0.5"
                    android:background="@drawable/myshape"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/zerro_USD"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dim5mm" />

                <TextView
                    android:id="@+id/brent"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim01mm"
                    android:layout_weight="0.5"
                    android:background="@drawable/myshape"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/zerro_BRENT"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dim5mm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cur_date_tl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dim01mm"
                android:layout_weight="35"
                android:background="@drawable/myshape"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="08"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim7mm" />

                    <TextView
                        android:id="@+id/mont"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dim02mm"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="апрель"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim7mm" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/weekDay"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="СР"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim7mm" />
                </LinearLayout>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/widjRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/artTL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dim01mm"
                android:layout_marginLeft="@dimen/dim01mm"
                android:layout_marginTop="@dimen/dim01mm"
                android:layout_weight="1"
                android:background="@drawable/myshape"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/curT1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/zerro_plas_minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dim15mm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/minT1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/trend1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_DUN"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/maxT1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/r56_press_tl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dim01mm"
                android:layout_marginLeft="@dimen/dim01mm"
                android:layout_marginRight="@dimen/dim01mm"
                android:layout_marginTop="@dimen/dim01mm"
                android:layout_weight="1"
                android:background="@drawable/myshape" >

                <TextView
                    android:id="@+id/curT2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/zerro_plas_minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dim10mm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/minT2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/trend2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_DUN"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />

                    <TextView
                        android:id="@+id/maxT2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim01mm"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="@string/zerro_plas_minus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim5mm" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/clockRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/big_clock_tl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/myshape"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/bch1"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim40mm" />

                    <TextView
                        android:id="@+id/brr1"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text=":"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim25mm" />

                    <TextView
                        android:id="@+id/m1"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim40mm" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/free_zone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/astr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/prg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</MediaController>
